workloads/phpfrontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: web
  namespace: demo-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: php-fpm
        image: mohitverma1688/php-app:v2-cloud
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
      - name: nginx
        image: nginx:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      imagePullSecrets: 
      - name: dockpub 
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
