workloads/phpfrontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app
    app.kubernetes.io/instance: php-frontend
  name: web
  namespace: demo-webapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app
status:
  loadBalancer: {}
